--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <form action="/login" method="post">
-        用户名: <input type="text" name="username">
+        用户名: <input type="text" name="account">
         密  码: <input type="password" name="password">
         <input type="submit" value="登录">
     </form>
