feat: 认证授权模块以及部分底层和实体修复
Signed-off-by: DLious <85938219@qq.com>

--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -5,6 +5,13 @@
     <title>菜单页</title>
 </head>
 <body>
-    菜单
+    <div>
+        <ul>
+            <li>anymore</li>
+            <li>特定用户组</li>
+            <li>特定机构</li>
+            <li>是否管理员</li>
+        </ul>
+    </div>
 </body>
 </html>
